🔧 relative path bugfix

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -2,29 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ႢႠႫႠႰႿႭႡႠ'"
+       "'ᲒᲐᲛᲐᲠᲯᲝᲑᲐ'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "\n",
     "from anbani.core.converter import convert, interpret\n",
     "\n",
-    "interpret(\"გამარჯობა\", \"asomtavruli\")"
+    "interpret(\"ႢႠႫႠႰႿႭႡႠ\", \"mtavruli\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -46,18 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Carlz dikensi    daviT koperfildi    Tavi pirveli    dabadeba    me viqnebi gmiri Cemive sakuTari Tavgadasavlisa Tu sxva, amas  mkiTxveli Semdegi furclebidan dainaxavs.  Tu Cemi cxovrebis ambavs sicocxlis dasabamidan daviwyeb, unda  mogaxsenoT, rom davibade paraskevs, swored Ramis Tormet saaTze. am \n",
+      "Error: no such file: '/home/george/Dev/georgian-text-corpus/sources/mylibrary/raw/files/ჩარლზ დიკენსი - დევიდ კოპერფილდი.pdf'\n",
       "\n",
       "latin\n",
       "\n",
-      "ჩარლზ დიკენსი    დავით კოპერფილდი    თავი პირველი    დაბადება    მე ვიქნები გმირი ჩემივე საკუთარი თავგადასავლისა თუ სხვა, ამას  მკითხველი შემდეგი ფურცლებიდან დაინახავს.  თუ ჩემი ცხოვრების ამბავს სიცოცხლის დასაბამიდან დავიწყებ, უნდა  მოგახსენოთ, რომ დავიბადე პარასკევს, სწორედ ღამის თორმეტ საათზე. ამ \n"
+      "ჱრრორ: ნო სუცჰ ფილე: '/ჰომე/გეორგე/ჷევ/გეორგიან-ტეხტ-ცორპუს/სოურცეს/მყლიბრარყ/რაწ/ფილეს/ჩარლზ დიკენსი - დევიდ კოპერფილდი.პდფ'\n"
      ]
     }
    ],
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -95,13 +98,6 @@
     "import fitz \n",
     "print(fitz.__doc__)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
