🎨 Playground updated for Georgianisation

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -2,7 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'გამარჯობა - როგორ ხარ - რასა იქმ - კაია კატა - კაი ერთი'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from anbani.nlp.georgianisation import georgianise\n",
+    "\n",
+    "georgianise(\"gamarjoba - rogor xar - rasa iqm - kaia kata - kai erti\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,15 +43,12 @@
        "'ᲒᲐᲛᲐᲠᲯᲝᲑᲐ'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append('../')\n",
-    "\n",
     "from anbani.core.converter import convert, interpret\n",
     "\n",
     "interpret(\"ႢႠႫႠႰႿႭႡႠ\", \"mtavruli\")"
