⚡ Decapitalisation added for Georgianisation

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'გამარჯობა - როგორ ხარ - რასა იქმ - კაია კატა - კაი ერთი'"
+       "'გამარჯობა - როგორ ხარ - რასა იქმ - კაია კატა - კაი ერთი - .სახლი'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,8 @@
    "source": [
     "from anbani.nlp.georgianisation import georgianise\n",
     "\n",
-    "georgianise(\"gamarjoba - rogor xar - rasa iqm - kaia kata - kai erti\")"
+    "# georgianise(\"gamarjoba - rogor xar - rasa iqm - kaia kata - kai erti - .Saxli\", mode=\"fast\")\n",
+    "georgianise(\"gamarjoba - rogor xar - rasa iqm - kaia kata - kai erti - .Saxli\")"
    ]
   },
   {
